--- a/web/main page/chatgpt.html
+++ b/web/main page/chatgpt.html
@@ -299,6 +299,10 @@
     const qs =(s,p=document)=>p.querySelector(s);
     const qsa=(s,p=document)=>[...p.querySelectorAll(s)];
     const css=n=>parseInt(getComputedStyle(document.documentElement).getPropertyValue(n));
+    
+    // Store last viewer size and position
+    let viewerState = {};
+    
     const SPACER  = css('--viewer-spacer');
     const GAP     = css('--gap');
     const RESERVE = css('--reserve');
@@ -446,20 +450,27 @@
     }
 
     /* open / update viewer */
-    function openViewer(src, fromThumb = null){
+    function openViewer(src, fromThumb = null) {
       // --- PART 1: Creation and Opening Animation ---
       if (!viewer) {
         viewer = qs('#viewer-template').cloneNode(true);
         viewer.id = '';
         viewer.style.display = '';
-        viewer.originThumb   = fromThumb;
+        viewer.originThumb = fromThumb;
         chat.appendChild(viewer);
         addViewerHandlers();
+
+        // Restore previous size and position
+        if (viewerState.width) {
+          viewer.style.width = viewerState.width;
+          viewer.style.height = viewerState.height;
+          viewer.style.top = viewerState.top;
+          viewer.style.left = viewerState.left;
+        }
 
         /* ⬇⬇⬇  ✱✱ FIXED ANIMATION START ✱✱ ⬇⬇⬇ */
         if (fromThumb) {
           if (body.classList.contains('game')) viewer.classList.add('full');
-
           // 0️⃣  Measure where we are and where we need to start
           const final = viewer.getBoundingClientRect();
           const thumb = fromThumb.getBoundingClientRect();
@@ -470,12 +481,12 @@
           const dy     = thumb.top  - final.top;
 
           // 1️⃣  Jump instantly on top of the thumbnail **without** transitions
-          viewer.classList.add('no-transition');          // 🔌 off
+          viewer.classList.add('no-transition');
           viewer.style.transformOrigin = 'top left';
           viewer.style.opacity   = '0';
           viewer.style.transform = `translate(${dx}px,${dy}px) scale(${scaleX},${scaleY})`;
-          void viewer.offsetWidth;                         // force-reflow
-          viewer.classList.remove('no-transition');       // 🔌 on
+          void viewer.offsetWidth;
+          viewer.classList.remove('no-transition');
 
           // 2️⃣  Next frame: animate to full size & full opacity
           requestAnimationFrame(() => {
@@ -487,7 +498,7 @@
           viewer.addEventListener(
             'transitionend',
             () => {
-              viewer.style.removeProperty('transform');   // let :hover / .dragging work
+              viewer.style.removeProperty('transform');
               setBottomPadding();
               scrollLatest();
             },
@@ -585,10 +596,25 @@
       handle.addEventListener('mouseleave', ()=>viewer.classList.remove('no-hover-animation'));
     }
 
-    function closeViewer(){
-      if(!viewer) return;
+    function closeViewer() {
+      if (!viewer) return;
 
-      window.removeEventListener('keydown',viewer._keys);
+      // Determine if we're closing from game mode
+      const isGameMode = viewer.classList.contains('full');
+
+      // Save last size and position only if not in game mode
+      if (!isGameMode) {
+        viewerState.width = viewer.style.width || `${viewer.getBoundingClientRect().width}px`;
+        viewerState.height = viewer.style.height || `${viewer.getBoundingClientRect().height}px`;
+        viewerState.top = viewer.style.top || `${viewer.getBoundingClientRect().top}px`;
+        viewerState.left = viewer.style.left || `${viewer.getBoundingClientRect().left}px`;
+      }
+
+      // Exit game mode
+      body.classList.remove('game');
+
+      window.removeEventListener('keydown', viewer._keys);
+
       // Animate back to the thumbnail if it exists and is visible
       const fromThumb = viewer.originThumb;
       if (fromThumb) {
@@ -606,12 +632,16 @@
       }
 
       // Remove the element after the animation completes
-      viewer.addEventListener('transitionend', () => {
-        if (viewer) viewer.remove();
-        viewer = null;
-        setBottomPadding();
-        scrollLatest();
-      }, { once: true });
+      viewer.addEventListener(
+        'transitionend',
+        () => {
+          if (viewer) viewer.remove();
+          viewer = null;
+          setBottomPadding();
+          scrollLatest();
+        },
+        { once: true }
+      );
     }
 
     function toggleGameMode(){
