Update bubble padding and margin for improved spacing in message display

--- a/web/main page/app.html
+++ b/web/main page/app.html
@@ -221,14 +221,13 @@
     .bubble[contenteditable="true"] {
       border:1px solid var(--stroke);background:var(--glass);backdrop-filter:var(--blur);
       border-radius:7px;box-shadow:var(--shadow);
-      padding: 7px;
-      margin: 7px 0 7px 0;
+      padding:7px;margin:14px 0 14px 0;
       outline: none;
     }
 
     .message.user .bubble{
       background:var(--glass);border:1px solid var(--stroke);border-radius:10px;
-      padding:1rem 1.3rem;backdrop-filter:var(--blur);box-shadow:var(--shadow)
+      padding:7px;margin:14px 0 14px 0;backdrop-filter:var(--blur);box-shadow:var(--shadow)
     }
     .attachments{display:flex;align-items:center;gap:11px;margin-bottom:.75rem}
     .thumb {
